fix navigation to favourite

--- a/app/src/main/res/layout/activity_community.xml
+++ b/app/src/main/res/layout/activity_community.xml
@@ -47,7 +47,7 @@
                 app:layout_constraintTop_toTopOf="parent">
 
                 <Button
-                    android:id="@+id/RecipePostTitle"
+                    android:id="@+id/BtnTitle"
                     style="?attr/borderlessButtonStyle"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -65,7 +65,7 @@
                     tools:ignore="DuplicateClickableBoundsCheck" />
 
                 <ImageView
-                    android:id="@+id/RecipeImage"
+                    android:id="@+id/IVposts"
                     android:layout_width="match_parent"
                     android:layout_height="300dp"
                     android:layout_margin="8dp"
