--- a/app/src/main/res/layout/fragment_c_b__favourite.xml
+++ b/app/src/main/res/layout/fragment_c_b__favourite.xml
@@ -8,250 +8,12 @@
     android:layout_height="match_parent"
     tools:context=".CB_Favourite">
 
-
-    <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            app:layout_constraintTop_toBottomOf="@id/TBMainAct">
-
-    <Button
-        android:id="@+id/fav_acc_name1"
-        style="?attr/borderlessButtonStyle"
-        android:layout_width="wrap_content"
-        android:layout_height="48dp"
-        android:layout_marginStart="30dp"
-        android:layout_marginTop="39dp"
-        android:backgroundTint="@color/white"
-        android:drawableLeft="@drawable/profile_icon1"
-        android:fontFamily="@font/alata"
-        android:text="Lalisa"
-        android:textAlignment="textStart"
-        android:textAllCaps="false"
-        android:textColor="@color/black"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclefav"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
-    <Button
-        android:id="@+id/fav_acc_name3"
-        style="?attr/borderlessButtonStyle"
-        android:layout_width="wrap_content"
-        android:layout_height="48dp"
-        android:layout_marginStart="30dp"
-        android:layout_marginTop="10dp"
-        android:backgroundTint="@color/white"
-        android:drawableLeft="@drawable/profile_icon1"
-        android:fontFamily="@font/alata"
-        android:text="Chaeyoung Park"
-        android:textAlignment="textStart"
-        android:textAllCaps="false"
-        android:textColor="@color/black"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/fav_post1" />
-
-    <Button
-        android:id="@+id/fav_acc_name5"
-        style="?attr/borderlessButtonStyle"
-        android:layout_width="wrap_content"
-        android:layout_height="48dp"
-        android:layout_marginStart="30dp"
-        android:layout_marginTop="8dp"
-        android:backgroundTint="@color/white"
-        android:drawableLeft="@drawable/profile_icon1"
-        android:fontFamily="@font/alata"
-        android:text="Teddy Park"
-        android:textAlignment="textStart"
-        android:textAllCaps="false"
-        android:textColor="@color/black"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/fav_post3" />
-
-    <Button
-        android:id="@+id/fav_acc_name6"
-        style="?attr/borderlessButtonStyle"
-        android:layout_width="wrap_content"
-        android:layout_height="48dp"
-        android:layout_marginStart="220dp"
-        android:layout_marginTop="10dp"
-        android:backgroundTint="@color/white"
-        android:drawableLeft="@drawable/profile_icon1"
-        android:fontFamily="@font/alata"
-        android:text="Haein Jung"
-        android:textAlignment="textStart"
-        android:textAllCaps="false"
-        android:textColor="@color/black"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/fav_post4" />
-
-    <Button
-        android:id="@+id/fav_acc_name4"
-        style="?attr/borderlessButtonStyle"
-        android:layout_width="wrap_content"
-        android:layout_height="48dp"
-        android:layout_marginStart="220dp"
-        android:layout_marginTop="10dp"
-        android:backgroundTint="@color/white"
-        android:drawableLeft="@drawable/profile_icon1"
-        android:fontFamily="@font/alata"
-        android:text="Jennie Kim"
-        android:textAlignment="textStart"
-        android:textAllCaps="false"
-        android:textColor="@color/black"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/fav_post2" />
-
-    <Button
-        android:id="@+id/fav_post1"
-        style="?attr/borderlessButtonStyle"
-        android:layout_width="155dp"
-        android:layout_height="160dp"
-        android:layout_marginStart="36dp"
-        android:layout_marginTop="-8dp"
-        android:backgroundTint="@color/white"
-        android:drawableTop="@drawable/kimchi"
-        android:drawableEnd="@drawable/_icon__bookmark__12_14_"
-        android:fontFamily="@font/alata"
-        android:text="Kimchi"
-        android:textAlignment="textStart"
-        android:textAllCaps="false"
-        android:textColor="@color/black"
-        android:textSize="12sp"
-        app:iconPadding="-6dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/fav_acc_name1" />
-
-    <Button
-        android:id="@+id/fav_post3"
-        style="?attr/borderlessButtonStyle"
-        android:layout_width="155dp"
-        android:layout_height="160dp"
-        android:layout_marginStart="36dp"
-        android:layout_marginTop="-8dp"
-        android:backgroundTint="@color/white"
-        android:drawableTop="@drawable/jjajangmyeon"
-        android:drawableEnd="@drawable/_icon__bookmark__12_14_"
-        android:fontFamily="@font/alata"
-        android:text="Jjajangmyeon"
-        android:textAlignment="textStart"
-        android:textAllCaps="false"
-        android:textColor="@color/black"
-        android:textSize="12sp"
-        app:iconPadding="-6dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/fav_acc_name3" />
-
-    <Button
-        android:id="@+id/fav_post5"
-        style="?attr/borderlessButtonStyle"
-        android:layout_width="155dp"
-        android:layout_height="160dp"
-        android:layout_marginStart="36dp"
-        android:layout_marginTop="-8dp"
-        android:backgroundTint="@color/white"
-        android:drawableTop="@drawable/lasagna"
-        android:drawableEnd="@drawable/_icon__bookmark__12_14_"
-        android:fontFamily="@font/alata"
-        android:text="Lasagna"
-        android:textAlignment="textStart"
-        android:textAllCaps="false"
-        android:textColor="@color/black"
-        android:textSize="12sp"
-        app:iconPadding="-6dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/fav_acc_name5" />
-
-    <Button
-        android:id="@+id/fav_post6"
-        style="?attr/borderlessButtonStyle"
-        android:layout_width="155dp"
-        android:layout_height="160dp"
-        android:layout_marginTop="-8dp"
-        android:layout_marginEnd="30dp"
-        android:backgroundTint="@color/white"
-        android:drawableTop="@drawable/jjajangmyeon"
-        android:drawableEnd="@drawable/_icon__bookmark__12_14_"
-        android:fontFamily="@font/alata"
-        android:text="Fettucine Alfredo"
-        android:textAlignment="textStart"
-        android:textAllCaps="false"
-        android:textColor="@color/black"
-        android:textSize="12sp"
-        app:iconPadding="-6dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/fav_acc_name6" />
-
-    <Button
-        android:id="@+id/fav_post4"
-        style="?attr/borderlessButtonStyle"
-        android:layout_width="155dp"
-        android:layout_height="160dp"
-        android:layout_marginTop="-8dp"
-        android:layout_marginEnd="30dp"
-        android:backgroundTint="@color/white"
-        android:drawableTop="@drawable/kimbap"
-        android:drawableEnd="@drawable/_icon__bookmark__12_14_"
-        android:fontFamily="@font/alata"
-        android:text="Kimbap"
-        android:textAlignment="textStart"
-        android:textAllCaps="false"
-        android:textColor="@color/black"
-        android:textSize="12sp"
-        app:iconPadding="-6dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/fav_acc_name4" />
-
-    <Button
-        android:id="@+id/fav_post2"
-        style="?attr/borderlessButtonStyle"
-        android:layout_width="155dp"
-        android:layout_height="160dp"
-        android:layout_marginTop="-8dp"
-        android:layout_marginEnd="30dp"
-        android:backgroundTint="@color/white"
-        android:drawableTop="@drawable/ttepokki"
-        android:drawableEnd="@drawable/_icon__bookmark__12_14_"
-        android:fontFamily="@font/alata"
-        android:text="Tteobokki"
-        android:textAlignment="textStart"
-        android:textAllCaps="false"
-        android:textColor="@color/black"
-        android:textSize="12sp"
-        app:iconPadding="-6dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/fav_acc_name2" />
-
-    <Button
-        android:id="@+id/fav_acc_name2"
-        style="?attr/borderlessButtonStyle"
-        android:layout_width="wrap_content"
-        android:layout_height="48dp"
-        android:layout_marginStart="220dp"
-        android:layout_marginTop="39dp"
-        android:backgroundTint="@color/white"
-        android:drawableLeft="@drawable/profile_icon1"
-        android:fontFamily="@font/alata"
-        android:text="Somi Jeon"
-        android:textAlignment="textStart"
-        android:textAllCaps="false"
-        android:textColor="@color/black"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/recycler_random"
-            android:layout_width="407dp"
-            android:layout_height="153dp"
-            android:layout_marginTop="20dp"
-            android:layout_marginEnd="4dp"
-            android:orientation="vertical"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/fav_post5">
-
-
-        </androidx.recyclerview.widget.RecyclerView>
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
 
 
 </ScrollView>
