--- a/app/src/main/res/layout/activity_aboutuser.xml
+++ b/app/src/main/res/layout/activity_aboutuser.xml
@@ -20,7 +20,7 @@
             android:padding="16dp">
 
             <ImageView
-                android:id="@+id/search_button"
+                android:id="@+id/BtnBook"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_toStartOf="@id/BtnSetting"
